Add FlatMapProducerFunction and flatMapProducer methods